--- a/experimental/higepon/scheme-gc/lib/unittest.scm.in
+++ b/experimental/higepon/scheme-gc/lib/unittest.scm.in
@@ -84,7 +84,7 @@
     (display "   actual: <")
     (write actual)
     (display ">")
-    (newline)))
+    (newline) #f))
 
 (define assert
   (let ((+ +))  ;; protect from redefinition
@@ -225,14 +225,30 @@
 ;;                          (fixnum-width)))
 
 ;; add by higepon
+(define assert-equality
+  (lambda (test-name proc expected actual)
+    (or (assert test-name test-name (proc expected actual))
+        (report-inequality expected actual))))
+
+
 (define-syntax assert-check-true
   (syntax-rules ()
     ((_ test-name f) (if (assert-true test-name f) #t
-                         (begin (display test-name) (display " test failed ") (display (quote f)) (newline))))
+                         (begin (display test-name) (display " test failed ") (write (quote f)) (newline))))
     ((_ test-name f g ...) (begin (assert-check-true test-name f) (assert-check-true test-name g ...)))))
 
 (define-syntax assert-check-false
   (syntax-rules ()
     ((_ test-name f) (if (assert-false test-name f) #t
-                         (begin (display test-name) (display " test failed ") (display (quote f)) (newline))))
+                         (begin (display test-name) (display " test failed ") (write (quote f)) (newline))))
     ((_ test-name f g ...) (begin (assert-check-false test-name f) (assert-check-false test-name g ...)))))
+
+(define-syntax assert-check-eqaul
+  (syntax-rules ()
+    ((_ proc f) (if (assert-equality (quote f)
+                                     proc
+                                     (eval (cadr f) (scheme-report-environment 5))
+                                     (eval (car f) (scheme-report-environment 5)))
+                    #t
+                    (begin (display " test failed ") (write (quote f)) (newline))))
+    ((_ proc f g ...) (begin (assert-check-eqaul proc f) (assert-check-eqaul proc g ...)))))
