--- a/experimental/higepon/scheme-gc/lib/shell.scm.in
+++ b/experimental/higepon/scheme-gc/lib/shell.scm.in
@@ -169,3 +169,6 @@
            (begin (display "[") (display (fs-name e)) (print "]"))
            (print (fs-name e))))
      (fs-entries (fs-current-directory)))))
+
+(define (gui)
+  (start-process "/SERVERS/GUI.EX5 /APPS/MONAFRMS.INI"))
