--- a/contrib/Graphics/bitmap/Makefile
+++ b/contrib/Graphics/bitmap/Makefile
@@ -2,6 +2,7 @@ TARGET  = BITMAP
 SOURCES = Form1.cpp
 
 INSTDIR = $(BINDIR)/APPS/MONAFRMS
+INSTFILES  = MONALISA.JPG
 SHAREDIR   = $(MONADIR)/share
 ifneq ($(BUILD_TARGET),ELF)
 ADDLINK    = -lgui-imp
