--- a/experimental/higepon/scheme-gc/lib/conf.scm.in
+++ b/experimental/higepon/scheme-gc/lib/conf.scm.in
@@ -6,3 +6,37 @@
                  (fs-path (fs-current-directory))
                  ">"))
 
+; ここから
+(define mona-timer-cont '())
+(define mona-timer-on #f)
+(define mona-timer-ms 10000)
+
+(define (mona-timer-add cont ms)
+  (set! mona-timer-cont cont)
+  (set! mona-timer-ms ms)
+  (set! mona-timer-on #t))
+
+(define (sample)
+  (print 1)
+  (print 2)
+  (if (= 0 (call/cc (lambda (c) (mona-timer-add c 10000) (c 1))))
+      (begin
+        (print 3)
+        (print 4)
+        (print 5))))
+
+
+(define (mona-timer)
+  (if mona-timer-on
+      (begin
+        (set! mona-timer-ms (- mona-timer-ms 100))
+;        (print mona-timer-ms)
+        (if (negative? mona-timer-ms)
+            (begin
+              (set! mona-timer-on #f)
+              (mona-timer-cont 0)
+            )
+            #f))
+          #f))
+
+; ここまでうまく動いた
