--- a/experimental/higepon/scheme-gc/lib/unittest.scm.in
+++ b/experimental/higepon/scheme-gc/lib/unittest.scm.in
@@ -243,7 +243,7 @@
                          (begin (display test-name) (display " test failed ") (write (quote f)) (newline))))
     ((_ test-name f g ...) (begin (assert-check-false test-name f) (assert-check-false test-name g ...)))))
 
-(define-syntax assert-check-eqaul
+(define-syntax assert-check-equal
   (syntax-rules ()
     ((_ proc f) (if (assert-equality (quote f)
                                      proc
@@ -251,4 +251,4 @@
                                      (eval (car f) (scheme-report-environment 5)))
                     #t
                     (begin (display " test failed ") (write (quote f)) (newline))))
-    ((_ proc f g ...) (begin (assert-check-eqaul proc f) (assert-check-eqaul proc g ...)))))
+    ((_ proc f g ...) (begin (assert-check-equal proc f) (assert-check-equal proc g ...)))))
