--- a/experimental/higepon/scheme-gc/lib/scheme.scm.in
+++ b/experimental/higepon/scheme-gc/lib/scheme.scm.in
@@ -1,6 +1,7 @@
 (load "<LIBDIR>/core.scm")
 (load "<LIBDIR>/danny.scm")
 (load "<LIBDIR>/shell.scm")
+(load "<LIBDIR>/timer.scm")
 (load "<LIBDIR>/conf.scm")
 ;(load "slib/Template.scm")
 ;(slib:report)
