It doesn't say... And it hasn't an interrupt...

--- a/contrib/Multimedia/audio_server/Makefile
+++ b/contrib/Multimedia/audio_server/Makefile
@@ -7,7 +7,7 @@ TARGET  = AUDIO
 SOURCES = main.cpp Audio.cpp ServerCommand.cpp Channel.cpp IntNotifer.cpp StreamReader.cpp drivers/es1370.cpp
 
 INSTDIR = $(BINDIR)/APPS/
-INSTFILES = 
+INSTFILES =  astart.scm
 CLEANFILES =
 $(TARGET).EX5: $(INSTFILES)
 
