--- a/contrib/Graphics/libgui/MONAFRMS.INI
+++ b/contrib/Graphics/libgui/MONAFRMS.INI
@@ -1,5 +1,5 @@
 [General]
-Run=/APPS/MONAFRMS/MONAFILE.APP/MONAFILE.EX5,/APPS/MONAFRMS/MSHELL.EX5
+Run=/APPS/MONAFRMS/MONAFILE.APP/MONAFILE.EX5,/APPS/MONAFRMS/MSHELL.EX5,/APPS/BAYGUI/BPLAYER.APP
 
 [Wallpaper]
 Source=/APPS/MONAFUN.JPG
