--- a/contrib/Graphics/libbaygui/BAYGUI.INI
+++ b/contrib/Graphics/libbaygui/BAYGUI.INI
@@ -1,5 +1,5 @@
 [General]
-Run=/APPS/BAYGUI/GLAUNCH.EX5,/APPS/BAYGUI/BPLAYER.APP/BPLAYER.EX5
+Run=/APPS/BAYGUI/GLAUNCH.EX5,/APPS/BAYGUI/BPLAYER.APP/BPLAYER.EX5,/APPS/BAYGUI/MONASQ.EX5
 
 [Wallpaper]
 Source=/APPS/MONAWALL.BM5
