--- a/experimental/higepon/scheme-gc/lib/shell.scm.in
+++ b/experimental/higepon/scheme-gc/lib/shell.scm.in
@@ -169,3 +169,7 @@
 (define (gui)
   (start-process "/SERVERS/GUI.EX5 /APPS/MONAFRMS.INI" #t))
 
+(define (baygui)
+  (start-process "/SERVERS/GUI.EX5 /APPS/BAYGUI.INI" #t))
+
+
