Fixed #include <pci/pci.h> and added a stopping mechanism.

--- a/experimental/audio_server2/Makefile
+++ b/experimental/audio_server2/Makefile
@@ -4,7 +4,7 @@ export MONADIR=$(shell cd $(PWD)/../../mona; pwd)
 endif
 
 TARGET  = AUDIO
-SOURCES = main.cpp es1370.cpp
+SOURCES = main.cpp es1370.cpp audio_driver.cpp
 
 INSTDIR = $(BINDIR)/APPS/
 INSTFILES =  
