--- a/contrib/Misc/helloworld/Makefile
+++ b/contrib/Misc/helloworld/Makefile
@@ -8,7 +8,7 @@ SOURCES = main.cpp
 INSTDIR = $(BINDIR)/APPS
 
 SHAREDIR   = $(MONADIR)/share
-ADDLINK    = -lmonalibc-imp -lgui-imp
+ADDLINK    =  -lonigurum-imp -lmonalibc-imp
 #ADDLINK    = -ldlltest-imp
 ifneq ($(BUILD_TARGET),ELF)
 include $(SHAREDIR)/configs/monapi-ex5.inc
@@ -16,6 +16,6 @@ else
 include $(SHAREDIR)/configs/monapi-el5.inc
 endif
 
-CXXFLAGS += -DDEBUG -I . -I ./boost -I$(INCDIR)/stlport
+CXXFLAGS += -DDEBUG -I . -I ./boost -I$(INCDIR)/stlport -I $(INCDIR)/onig
 
 include dependencies
