--- a/experimental/higepon/scheme-gc/lib/conf.scm.in
+++ b/experimental/higepon/scheme-gc/lib/conf.scm.in
@@ -25,7 +25,7 @@
 (define (bplayer)
   (start-process "/APPS/BAYGUI/BPLAYER.EX5"))
 
-(define (audio)
+(define (a)
   (start-process "/APPS/AUDIO.EX5"))
 
 (define (h)
