It became a server. Directory 'client' contains a client program. But `AUDIO.EX5` aborts as soon as it starts.

--- a/contrib/Multimedia/audio_server2/client/Makefile
+++ b/contrib/Multimedia/audio_server2/client/Makefile
@@ -1,13 +1,13 @@
 ifndef $(MONADIR)
 # export MONADIR=$(PWD)/../mona
-export MONADIR=$(shell cd $(PWD)/../../../mona; pwd)
+export MONADIR=$(shell cd $(PWD)/../../../../mona; pwd)
 endif
 
-TARGET  = AUDIO
-SOURCES = main.cpp es1370.cpp audio_driver.cpp audio_server.cpp
+TARGET  = ACLI
+SOURCES = main.cpp
 
 INSTDIR = $(BINDIR)/APPS/
-INSTFILES = test.raw
+INSTFILES =
 CLEANFILES =
 $(TARGET).EX5: $(INSTFILES)
 
@@ -28,7 +28,6 @@ ADDLINK += -lpci-imp
 install: all
 	mkdir -p $(INSTDIR)
 	$(INSTALL) -p $(TARGET).EX5 $(INSTFILES) $(INSTDIR)
-	$(INSTALL) -p ./servers/audio.h $(INCDIR)/servers
 
 
 CXXFLAGS += -I$(INCDIR)/stlport -fpermissive -DDEBUG
