--- a/experimental/higepon/scheme-gc/test/test.scm.in
+++ b/experimental/higepon/scheme-gc/test/test.scm.in
@@ -401,6 +401,7 @@
 
 (load "<TESTDIR>/dir.scm")
 (load "<TESTDIR>/cont.scm")
+(load "<TESTDIR>/regexp.scm")
 (load "<TESTDIR>/timer.scm")
 (load "<TESTDIR>/string.scm")
 (load "<TESTDIR>/pair.scm")
@@ -411,7 +412,6 @@
 (load "<TESTDIR>/symbol.scm")
 (load "<TESTDIR>/number.scm")
 (load "<TESTDIR>/closure.scm")
-
 
 
 <IF_MONA>(load "<TESTDIR>/shell.scm")
