--- a/experimental/higepon/scheme-gc/Makefile
+++ b/experimental/higepon/scheme-gc/Makefile
@@ -5,7 +5,7 @@ TEST_FILES  = test/char.scm test/closure.scm test/cont.scm test/generate.scm \
               test/number.scm test/pair.scm test/port.scm test/string.scm test/symbol.scm \
               test/test.scm test/util.scm test/vector.scm test/dir.scm #test/timer.scm
 
-CXXFLAGS = -pg -g -idirafter . -Wall $(GC_CFLAGS) #-DMACRO_TRACE
+CXXFLAGS = -pg -g -idirafter . -Wall $(GC_CFLAGS) -I ./onig/onig-5.7.0 #-DMACRO_TRACE
 CFLAGS   = $(CXXFLAGS)
 LDFLAGS  = $(GC_LDFLAGS)
 NFLAGS   = -felf
@@ -15,6 +15,8 @@ include Makefile.src.inc
 include Makefile.mona_gc.inc
 # たまに これで make checkする
 #include Makefile.none_gc.inc
+
+include Makefile.onig.inc
 
 TEST_SOURCES = \
 test_cpp/yaml.cpp\
@@ -28,15 +30,16 @@ OBJECTS = $(SOURCES:.cpp=.o)
 TEST_OBJECTS = $(TEST_SOURCES:.cpp=.o)
 
 GC_OBJECTS = $(GC_SOURCES:.cpp=.o)
+ONIG_OBJECTS = $(ONIG_SOURCES:.c=.o)
 all : $(TARGET) $(TEST_TARGET)
 
 include Makefile.dep.inc
 
-$(TARGET):  $(REGISTERS_INC) $(PROCEDURES_H) main.o $(OBJECTS) $(LIBCONT_OBJECTS) $(GC_OBJECTS) $(TARGET_LIBS) $(TEST_FILES)
-	$(CXX) -lonig -pg -g main.o $(OBJECTS) $(LIBCONT_OBJECTS) $(GC_OBJECTS) -o $(TARGET) $(LDFLAGS)
+$(TARGET):  $(ONIG_DIR) $(REGISTERS_INC) $(PROCEDURES_H) main.o $(OBJECTS) $(LIBCONT_OBJECTS) $(GC_OBJECTS) $(ONIG_OBJECTS) $(TARGET_LIBS) $(TEST_FILES)
+	$(CXX) -pg -g main.o $(OBJECTS) $(LIBCONT_OBJECTS) $(GC_OBJECTS) $(ONIG_OBJECTS) -o $(TARGET) $(LDFLAGS)
 
-$(TEST_TARGET):  $(REGISTERS_INC) $(PROCEDURES_H) test_cpp/main.o $(OBJECTS) $(LIBCONT_OBJECTS) $(TEST_OBJECTS) $(GC_OBJECTS)
-	$(CXX) -lcppunit -ldl -lonig -g test_cpp/main.o $(OBJECTS) $(LIBCONT_OBJECTS) $(GC_OBJECTS) $(TEST_OBJECTS) -o $(TEST_TARGET) $(LDFLAGS)
+$(TEST_TARGET):  $(REGISTERS_INC) $(PROCEDURES_H) test_cpp/main.o $(OBJECTS) $(LIBCONT_OBJECTS) $(TEST_OBJECTS) $(GC_OBJECTS) $(ONIG_OBJECTS)
+	$(CXX) -lcppunit -ldl -lonig -g test_cpp/main.o $(OBJECTS) $(LIBCONT_OBJECTS) $(GC_OBJECTS) $(ONIG_OBJECTS) $(TEST_OBJECTS) -o $(TEST_TARGET) $(LDFLAGS)
 
 check : $(TEST_TARGET) $(TARGET)
 	$(TEST_TARGET)
@@ -47,6 +50,9 @@ gdb : $(TARGET)
 
 test_cpp/main.o: test_cpp/main.cpp
 	$(CXX) $(CXXFLAGS) $(INCLUDE) -c $< -o $@
+
+$(ONIG_DIR) : 
+	(cd onig && $(MAKE))
 
 .SUFFIXES: .scm.in .scm
 .scm.in.scm:
@@ -67,6 +73,6 @@ depend:
 
 clean :
 	rm -f $(OBJECTS) $(TARGET) main.o $(TEST_OBJECTS) $(LIBCONT_OBJECTS) $(TEST_TARGET)\
-$(GC_OBJECTS) $(REGISTERS_INC) $(PROCEDURES_H) $(TARGET_LIBS) test/test.scm test/dir.scm test/port.scm
+$(ONIG_OBJECTS) $(GC_OBJECTS) $(REGISTERS_INC) $(PROCEDURES_H) $(TARGET_LIBS) test/test.scm test/dir.scm test/port.scm
 
 -include dependencies
