--- a/experimental/higepon/scheme-gc/lib/conf.scm.in
+++ b/experimental/higepon/scheme-gc/lib/conf.scm.in
@@ -172,5 +172,50 @@
 ;;                        (loop (+ 1 i)))
 ;;                      #f))))
 
+; 落ちるかどうか検討する。不要になったら消す
+(define (t)
+  (aif it (find (lambda (window) (string=? (mona-gui-get-window-title window) "GUI Shell"))
+                (mona-gui-enum-windows))
+       (let loop ((x 300) (y 300))
+         (cond ((and (< x 300) (= y 10))
+                (begin
+                  (mona-gui-move-window it x y)
+                  (loop (+ x 10) y)))
+               ((and (>= x 300) (<= y 300))
+                (begin
+                  (mona-gui-move-window it x y)
+                  (loop x (+ 10 y))))
+               ((and (> x 10) (>= y 300))
+                (begin
+                  (mona-gui-move-window it x y)
+                  (loop (- x 10) y)))
+               ((and (= x 10) (> y 10))
+                (begin
+                  (mona-gui-move-window it x y)
+                  (loop x (- y 10))))
+               (else (loop 300 300))))
+       #f))
 
+(define (x)
+  (let loop ((i 0))
+    (cond ((= i 9000)
+           (print i))
+          ((= i 8000)
+           (print i))
+          ((= i 7000)
+           (print i))
+          ((= i 6000)
+           (print i))
+          ((= i 5000)
+           (print i))
+          ((= i 4000)
+           (print i))
+          ((= i 3000)
+           (print i))
+          ((= i 2000)
+           (print i))
+          ((= i 1000)
+           (print i))
+          (else #f))
+    (loop (+ 1 i))))
 (gui)
